--- a/PML Projects/16 - 02a Python natural language processing practice (do over).ipynb
+++ b/PML Projects/16 - 02a Python natural language processing practice (do over).ipynb
@@ -1123,11 +1123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_process(mess):\n",
+    "def text_process(mess):\n",
     "    '''\n",
     "    1. remove punc\n",
     "    2. remove stop words\n",
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1157,35 +1157,628 @@
        "Name: message, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "messages['message'].head(5).apply(test_process)"
+    "messages['message'].head(5).apply(text_process)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bow_transformer = CountVectorizer(analyzer=text_process).fit(messages['message'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11425\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(bow_transformer.vocabulary_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mess4 = messages['message'][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'U dun say so early hor... U c already then say...'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mess4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bow4 = bow_transformer.transform([mess4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 4068)\t2\n",
+      "  (0, 4629)\t1\n",
+      "  (0, 5261)\t1\n",
+      "  (0, 6204)\t1\n",
+      "  (0, 6222)\t1\n",
+      "  (0, 7186)\t1\n",
+      "  (0, 9554)\t2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bow4) # 7 unique words in message 4,\n",
+    "# after removing the common stopwords\n",
+    "# two words appear twice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 11425)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bow4.shape) ## 11425 being the entire vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'U'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow_transformer.get_feature_names()[4068] #checking the index for words\n",
+    "# used more than once. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'say'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow_transformer.get_feature_names()[9554]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages_bow = bow_transformer.transform(messages['message'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Sparse Matrix: (5572, 11425)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Shape of Sparse Matrix:', messages_bow.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of Non-Zero occurences:  50548\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Amount of Non-Zero occurences: ', messages_bow.nnz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sparsity rounded: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparsity = (100.0 * messages_bow.nnz / (messages_bow.shape[0] * messages_bow.shape[1]))\n",
+    "print(f'sparsity rounded: {round(sparsity)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sparsity: 0.07940295412668218\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparsity = (100.0 * messages_bow.nnz / (messages_bow.shape[0] * messages_bow.shape[1]))\n",
+    "print(f'sparsity: {sparsity}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_transformer = TfidfTransformer().fit(messages_bow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf4 = tfidf_transformer.transform(bow4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 9554)\t0.5385626262927564\n",
+      "  (0, 7186)\t0.4389365653379857\n",
+      "  (0, 6222)\t0.3187216892949149\n",
+      "  (0, 6204)\t0.29953799723697416\n",
+      "  (0, 5261)\t0.29729957405868723\n",
+      "  (0, 4629)\t0.26619801906087187\n",
+      "  (0, 4068)\t0.40832589933384067\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tfidf4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.527076498901426"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_transformer.idf_[bow_transformer.vocabulary_['university']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages_tfidf = tfidf_transformer.transform(messages_bow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spam_detect_model = MultinomialNB().fit(messages_tfidf,messages['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ham'], dtype='<U4')"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_detect_model.predict(tfidf4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ham'"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_detect_model.predict(tfidf4)[0] #remember this is the forth message "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ham'"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "messages['label'][3] #should match up to this part and it does"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ham', 'ham', 'spam', ..., 'ham', 'ham', 'ham'], dtype='<U4')"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_pred = spam_detect_model.predict(messages_tfidf)\n",
+    "all_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg_train,msg_test,label_train,label_test = train_test_split(messages['message'],messages['label'],test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4396    Only just got this message, not ignoring you. ...\n",
+       "2804                    FreeMsg>FAV XMAS TONES!Reply REAL\n",
+       "329                      Cool, text me when you're parked\n",
+       "4034    I am taking you for italian food. How about a ...\n",
+       "3477    I can probably come by, everybody's done aroun...\n",
+       "Name: message, dtype: object"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('bow',CountVectorizer(analyzer=text_process)),\n",
+    "    ('tfidf',TfidfTransformer()),\n",
+    "    ('classifier', MultinomialNB())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('bow',\n",
+       "                 CountVectorizer(analyzer=<function text_process at 0x000001BB8FB6C158>,\n",
+       "                                 binary=False, decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.int64'>, encoding='utf-8',\n",
+       "                                 input='content', lowercase=True, max_df=1.0,\n",
+       "                                 max_features=None, min_df=1,\n",
+       "                                 ngram_range=(1, 1), preprocessor=None,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=None, vocabulary=None)),\n",
+       "                ('tfidf',\n",
+       "                 TfidfTransformer(norm='l2', smooth_idf=True,\n",
+       "                                  sublinear_tf=False, use_idf=True)),\n",
+       "                ('classifier',\n",
+       "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(msg_train,label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = pipeline.predict(msg_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.96      1.00      0.98      1461\n",
+      "        spam       1.00      0.71      0.83       211\n",
+      "\n",
+      "    accuracy                           0.96      1672\n",
+      "   macro avg       0.98      0.85      0.90      1672\n",
+      "weighted avg       0.96      0.96      0.96      1672\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(label_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('bow',CountVectorizer(analyzer=text_process)),\n",
+    "    ('tfidf',TfidfTransformer()),\n",
+    "    ('classifier', RandomForestClassifier())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.96      1.00      0.98      1461\n",
+      "        spam       0.98      0.68      0.80       211\n",
+      "\n",
+      "    accuracy                           0.96      1672\n",
+      "   macro avg       0.97      0.84      0.89      1672\n",
+      "weighted avg       0.96      0.96      0.95      1672\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipeline.fit(msg_train,label_train)\n",
+    "pred = pipeline.predict(msg_test)\n",
+    "print(classification_report(label_test,pred))"
+   ]
   },
   {
    "cell_type": "code",
